# yast2-adsi

./: .gitignore  .travis.yml  Makefile.am  RPMNAME  configure.ac
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-adsi.changes  yast2-adsi.spec
src/: Makefile.am  adsi.desktop.in  adsi.py  complex.py  creds.py  dialogs.py  org.opensuse.yast.ADSI.desktop  org.opensuse.yast.ADSI.desktop.in  strings.py  wizards.py  yldap.py
src/desktop/: org.opensuse.yast.ADSI.desktop
src/include/adsi/: complex.py  dialogs.py  wizards.py
